# emcanvas

./: .gitignore  CMakeLists.txt  NOTICE  README.md  canvas.data  canvas.js  canvas.wasm  index.html  main.js  styles.css
.github/workflows/: cmake.yml
assets/app/licenses/: favicon.txt
src/: algorithms.cpp  algorithms.hpp  app.cpp  app.hpp  brush.cpp  brush.hpp  main.cpp
